--- a/lesson-2.10.css
+++ b/lesson-2.10.css
@@ -50,6 +50,23 @@ body{
     left: 0;
 }
 
+.box1{
+    width: 240px;
+    height: 240px;
+    font-size: 145px;
+    color: red;
+    border: 30px solid black;
+    border-radius: 28px 0 0 28px ;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+}
+
 .ligh2{
     width: 180px;
     height: 180px;
